--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ nav {
 
 .img {
     margin-right: 25px;
-    margin-bottom: 5px;
+    margin-bottom: 7px;
     border-radius: 15px;
     box-shadow: 5px 10px 25px darkgray;
 }
@@ -22,6 +22,7 @@ nav {
 .navbar-brand {
     margin-left: 5%;
     font-size: 30px;
+    font-weight: bold;
 }
 
 h2 {
