--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,7 @@ body {
     font-family: 'Sorts Mill Goudy';
 }
 
-.bannerSub {
+#bannerSub {
     color: white;
     font-size: 20px;
     margin-left: 60px;
@@ -175,7 +175,7 @@ body {
         display: none;
     }
 
-    .bannerSub {
+    #bannerSub {
         display: none;
     }
 
