--- a/assets/style.css
+++ b/assets/style.css
@@ -68,6 +68,10 @@ body {
 
 }
 
+#downL {
+    margin-left: 7px;
+}
+
 .title {
     font-family: 'Crimson Text', serif;
     color: white;
@@ -225,6 +229,10 @@ body {
     }
 
     #nav {
+        font-size: 8px;
+    }
+
+    #downL {
         font-size: 8px;
     }
 
